--- a/src/css/ClinicHistory.css
+++ b/src/css/ClinicHistory.css
@@ -1,11 +1,17 @@
 /* 진료 기록 테이블 스타일 */
-.clinic-table {
+.clinic-history-clinic-table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    margin-left: 40px;
 }
 
-.clinic-table th {
+.clinic-history h2 {
+    margin-left: 40px;
+    margin-top: 20px;
+}
+
+.clinic-history-clinic-table th {
     background-color: #E3AB1B;
     /* 헤더의 배경 색상 */
     color: white;
@@ -14,36 +20,35 @@
     border-bottom: 5px solid white;
 }
 
-.clinic-table td {
+.clinic-history-clinic-table td {
     padding: 12px;
     border-bottom: 1px solid #ccc;
     text-align: center;
 }
 
-.clinic-table td button {
+.clinic-history-clinic-table td button {
     margin-left: 10px;
 }
 
 /* 리뷰 쓰기 버튼 스타일 */
-.reviewUpdatebutton{
+.clinic-history-reviewUpdatebutton {
     background-color: white;
     color: black;
     border-color: #43ABAE;
     padding: 6px 12px;
-    border-radius: 5px;
     cursor: pointer;
     font-size: 14px;
 }
 
 /* 페이징 스타일 */
-.pagination {
+.clinic-history-pagination {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
-.pagination button {
+.clinic-history-pagination button {
     background-color: transparent;
     border: none;
     font-size: 16px;
@@ -51,7 +56,7 @@
     padding: 5px 10px;
 }
 
-.pagination .active {
+.clinic-history-pagination .clinic-history-active {
     color: black;
     font-weight: bold;
     border: 1px solid #ddd;
@@ -59,6 +64,72 @@
     background-color: #f0f0f0;
 }
 
-.pagination button:hover {
+.clinic-history-pagination button:hover {
     background-color: #f0f0f0;
+}
+
+/* 진료기록 모달창 CSS */
+.clinic-history-modal-overlay {
+    position: fixed;
+    top: 60px;
+    left: 180px;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent; /* 검은 배경 제거 */
+}
+
+.clinic-history-modal-content {
+    background-color: #E3AB1B;
+    padding: 20px;
+    padding-top: 50px; /* 모달 상단의 여유 공간 추가 */
+
+    width: 90%;
+    max-width: 500px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.clinic-history-modal-content h2 {
+    position: absolute;
+    top: -10px;
+    left: 120px;
+    color: white; /* 글씨를 흰색으로 설정 */
+    padding: 10px;
+    font-size: 20px;
+}
+
+.clinic-history-modal-buttons {
+    margin-top: 15px;
+}
+
+.clinic-history-modal-buttons button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.clinic-history-writebutton {
+    background-color: #42b7bb;
+    color: white;
+}
+
+.clinic-history-writeclosebutton {
+    background-color: #fc5c65;
+    color: white;
+}
+
+.clinic-history-modal-content textarea {
+    width: 500px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    resize: none;
+    font-size: 16px;
+    box-sizing: border-box;
+    margin-top: 20px;
+    height: 130px;
 }
