--- a/src/css/MyReviews.css
+++ b/src/css/MyReviews.css
@@ -1,13 +1,16 @@
-
-.reviews-table {
-    width: 100%;
+.my-review-reviews-table {
+    width: 115%;
     border-collapse: collapse;
-    text-align: left;
+    margin-top: 20px;
+    margin-left: 40px;
+}
+
+.my-review-reviews h2 {
+    margin-left: 40px;
     margin-top: 20px;
 }
 
-
-.reviews-table th {
+.my-review-reviews-table th {
     background-color: #E3AB1B;
     color: white;
     font-weight: bold;
@@ -16,68 +19,73 @@
     text-align: center;
 }
 
-.reviews-table td {
+.my-review-reviews-table td {
     padding: 12px;
     border-bottom: 1px solid #ccc;
     text-align: center;
 }
 
-.view-btn, .review-delete-btn {
+.my-review-view-btn, .my-review-review-delete-btn {
     padding: 5px 10px;
     margin: 5px;
     border: none;
     cursor: pointer;
     color: white;
-    border-radius: 4px;
 }
 
-.view-btn {
+.my-review-view-btn {
     background-color: #43ABAE;
 }
 
-.review-delete-btn {
+.my-review-review-delete-btn {
     background-color: #fc5c65;
 }
 
-.pagination {
-    margin-top: 20px;
-    text-align: center;
+.my-review-pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    margin-left: 150px;
 }
 
-.pagination button {
-    padding: 5px 10px;
-    margin: 0 5px;
+.my-review-pagination button {
+    background-color: transparent;
     border: none;
-    background-color: #eee;
+    font-size: 16px;
     cursor: pointer;
+    padding: 5px 10px;
 }
 
-.pagination .active {
-    background-color: #45aaf2;
-    color: white;
+.my-review-pagination .my-review-active {
+    color: black;
+    font-weight: bold;
+    border: 1px solid #ddd;
+    padding: 5px 10px;
+    background-color: #f0f0f0;
+}
+
+.my-review-pagination button:hover {
+    background-color: #f0f0f0;
 }
 
 /* 모달 CSS */
-.modal-overlay {
+.my-review-modal-overlay {
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 60px;
+    left: 180px;
     right: 0;
     bottom: 0;
-    transform: translate(50px, -10px);
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: transparent; /* 검은 배경 제거 */
-    
-
 }
 
-.modal-content {
+.my-review-modal-content {
     background-color: #E3AB1B;
     padding: 20px;
     padding-top: 50px; /* 모달 상단의 여유 공간 추가 */
-    border-radius: 10px;
     width: 90%;
     max-width: 500px;
     text-align: center;
@@ -85,39 +93,40 @@
     position: relative;
 }
 
-.modal-content h2 {
+.my-review-modal-content h2 {
     position: absolute;
     top: -10px;
-    left: 50%;
+    left: 225px;
     transform: translateX(-50%);
     color: white; /* 글씨를 흰색으로 설정 */
     padding: 10px;
     font-size: 20px;
 }
 
-.modal-buttons {
+.my-review-modal-buttons {
     margin-top: 15px;
 }
 
-.modal-buttons button {
+.my-review-modal-buttons button {
     padding: 10px 20px;
     margin: 0 10px;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
 }
 
-.save-btn {
+.my-review-save-btn {
     background-color: #43ABAE;
     color: white;
+    height: 36px;
 }
 
-.close-btn {
+.my-review-close-btn {
     background-color: #fc5c65;
     color: white;
+    height: 36px;
 }
 
-.confirm-btn {
+.my-review-confirm-btn {
     background-color: #43ABAE;
     color: white;
     padding: 5px 10px;
@@ -125,16 +134,15 @@
     border: none;
     cursor: pointer;
     color: white;
-    border-radius: 4px;
 }
 
-textarea {
+.my-review-modal-content textarea {
     width: 100%;
     padding: 10px;
-    border-radius: 5px;
     border: 1px solid #ccc;
     resize: none;
     font-size: 16px;
     box-sizing: border-box;
-
+    margin-top: 20px;
+    height: 130px;
 }
