[STYLE] 인증 번호 버튼 수정

--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -232,3 +232,16 @@ button:active {
   display: inline-block;
 }
 
+.signup-code-check-button {
+  padding: 12px 15px;
+  font-size: 14px;
+  margin-top: 20px;
+  background-color: #28467A;
+  height: 40px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  border-radius: 0px;
+  font-family: 'Poor Story';
+}
+
